# Backend

./: pyproject.toml
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_rewardhistory.py  0002_user_age_user_nationality_user_nickname_and_more.py  0003_alter_user_email_alter_user_username.py  0003_rewardhistory_balance.py
ai/: admin.py  models.py  serializers.py  urls.py  views.py
ai/migrations/: 0001_initial.py  0002_alter_tag_polarity.py  0002_conversation.py  0003_alter_feedback_user.py  0003_conversation_category.py  0004_topic_alter_tag_polarity.py  0005_alter_topic_topic.py  0006_rename_tag_feedbacktag.py
config/: settings.py  urls.py
image/: urls.py  views.py
markets/: admin.py  models.py  serializers.py  urls.py  views.py
markets/migrations/: 0001_initial.py  0002_market_market_image2_market_market_image3.py
menu/: models.py  serializers.py  urls.py  views.py
menu/migrations/: 0001_initial.py  0002_menu_ex.py  0003_alter_menu_price.py
receipts/: models.py  serializers.py  urls.py  views.py
receipts/migrations/: 0001_initial.py  0002_remove_receipt_currency_remove_receipt_store_biz_no_and_more.py
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_alter_reviewtag_category_alter_reviewtag_group.py  0002_remove_reviewtag_unique_category_tag_reviewtag_group_and_more.py  0003_alter_reviewtag_group.py  (+1 more)
stores/: admin.py  models.py  serializers.py  urls.py  views.py
testapi/: models.py  serializers.py  urls.py  views.py
(+12 files in other folders)
