[project]
name = "hacka"
version = "0.1.0"
description = ""
authors = [
    {name = "ziwonii",email = "nayanako03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "sshtunnel (>=0.4.0,<0.5.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-allauth (>=65.10.0,<66.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "cryptography (>=45.0.6,<46.0.0)"
    "pillow (>=11.3.0,<12.0.0)",
    "boto3 (>=1.40.9,<2.0.0)",
    "django-storages (>=1.14.6,<2.0.0)"
]

[tool.poetry]
packages = [{include = "hacka", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
